--- a/style/vehicles.scss
+++ b/style/vehicles.scss
@@ -68,14 +68,9 @@
 
         span {
           color: #888;
-          transform: translateX(10);
-          opacity: 0;
-          transition: opacity 0.2s ease, transform 0.2s ease;
-        }
-
-        &:hover span {
-          opacity: 1;
-          transform: translateX(0);
+          // transform: translateX(10px);
+          // opacity: 0;
+          // transition: opacity 0.2s ease, transform 0.2s ease;
         }
 
       }
@@ -84,6 +79,7 @@
 
   }
 
+  &#falcon9-v11 .stack,
   &#falcon9-v11.open .stack {
     
     .upper.layer {
