--- a/style/vehicles.css
+++ b/style/vehicles.css
@@ -2,7 +2,8 @@
   padding: 16px 64px; }
   .vehicle > header {
     padding: 0 64px;
-    border-bottom: 2px solid #404040; }
+    border-bottom: 2px solid #404040;
+    margin-bottom: 24px; }
     .vehicle > header * {
       display: inline-block; }
     .vehicle > header h1 {
@@ -83,9 +84,9 @@
   .vehicle#falcon9-v11.open .stack > .payload.layer .payload.satellite.layer .adapter.layer {
     margin-top: 20px; }
   .vehicle#falcon9-v11.open .stack > .payload.layer .payload.satellite.layer .left-fairing.layer {
-    margin-left: -50px; }
+    margin-left: -35px; }
   .vehicle#falcon9-v11.open .stack > .payload.layer .payload.satellite.layer .right-fairing.layer {
-    margin-left: 50px; }
+    margin-left: 35px; }
   .vehicle#falcon9-v11.open .stack .booster.layer {
     margin-top: 300px; }
 
