--- a/style/vehicles.css
+++ b/style/vehicles.css
@@ -53,7 +53,8 @@
         position: absolute;
         left: 360px;
         top: 51px;
-        width: 640px; }
+        width: 640px;
+        pointer-events: auto; }
         .vehicle .stack .annotation .text h1, .vehicle .stack .annotation .text span {
           display: inline-block; }
         .vehicle .stack .annotation .text h1 {
